--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </header>
     <!-- main part starts here -->
     <main>
+        <!-- categories section starts here -->
         <section>
             <div class="container text-center my-5">
                 <div class="row g-2">
@@ -147,6 +148,64 @@
                 </div>
               </div>
         </section>
+        <!-- categories section starts here -->
+        <!-- shoes section starts here -->
+        <section class="container hy-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+
+                    </p>
+                    </div>
+                    <div class="m-3">
+                      <div class="btn btn-warning">
+                        Buy Now
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360
+
+                    </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
+
+                        .</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">
+                            Buy Now
+                          </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax
+                        </h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">
+                            Buy Now
+                          </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <!-- shoes section ends here -->
     </main>
      <!-- main part ends here -->
     
