--- a/index.html
+++ b/index.html
@@ -158,9 +158,11 @@
                     <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 350</h5>
+
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
 
                     </p>
+                    <h4>$120</h4>
                     </div>
                     <div class="m-3">
                       <div class="btn btn-warning">
@@ -175,10 +177,9 @@
                     <div class="card-body">
                       <h5 class="card-title">Nike 360
 
-                    </h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
 
-                        .</p>
+                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                         <h4>$300</h4>
                     </div>
                     <div class="m-3">
                         <div class="btn btn-warning">
@@ -192,8 +193,10 @@
                     <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Red Airmax
+
                         </h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                      <h4>$150</h4>
                     </div>
                     <div class="m-3">
                         <div class="btn btn-warning">
@@ -206,6 +209,66 @@
 
         </section>
         <!-- shoes section ends here -->
+        <!-- bags section starts here -->
+        <section class="container hy-5">
+            <h2>Backpacks</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+
+                      
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      <h4>$50</h4>
+                    </div>
+                    <div class="m-3">
+                      <div class="btn btn-warning">
+                        Buy Now
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Nilt                </h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h4>$40</h4>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">
+                            Buy Now
+                          </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                    <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Kaltu Bag
+
+
+                        </h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                      <h4>$70</h4>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">
+                            Buy Now
+                          </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+
+        <!-- bags section ends here -->
+
     </main>
      <!-- main part ends here -->
     
