--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="container">
         <!-- nav starts here -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="">
@@ -23,13 +23,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#bags">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                  
                 </ul>
@@ -150,7 +150,7 @@
         </section>
         <!-- categories section starts here -->
         <!-- shoes section starts here -->
-        <section class="container hy-5">
+        <section class="container hy-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -210,7 +210,7 @@
         </section>
         <!-- shoes section ends here -->
         <!-- bags section starts here -->
-        <section class="container hy-5">
+        <section class="container hy-5" id="bags">
             <h2>Backpacks</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -268,9 +268,28 @@
         </section>
 
         <!-- bags section ends here -->
+        <!-- subscribe section starts here -->
+        <section style="background-color: rgba(250, 225, 228, 0.711) ; height: 300px;" class="container rounded-3 my-5 d-flex align-items-center justify-content-center">
+           <div>
+            <h2 class="mb-1">LET'S STAY IN TOUCH</h2>
+            <p class="mb-1">Get updates on sales, specials and more</p>
+            <form>
+                <div class="mb-2">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+               <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+           </div>
+        </section>
+        <!-- subscribe section ends here -->
 
     </main>
      <!-- main part ends here -->
+     <!-- footer section starts here -->
+     <footer class="mt-5 text-center" id="subscribe">
+        <p> <small> ©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+     </footer>
+     <!-- footer section ends here -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
