--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda E-Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
+    <!-- custom css -->
+    <link rel="stylesheet" href="./css/style.css">
+</head>
   <body>
     <header class="container">
         <!-- nav starts here -->
@@ -40,8 +42,8 @@
           <!-- slider starts here -->
           <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div style="background-color: rgba(250, 225, 228, 0.711) ;" class="carousel-item active border rounded p-5">
+                <div class="carousel-inner panda-bg-info">
+                  <div class="carousel-item active border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center">
                             <div>
@@ -50,7 +52,7 @@
 
                                 </p>
                                 <h1>$1200</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn buy-now-button">Buy Now</div>
                             </div>
 
                         </div>
@@ -59,7 +61,7 @@
                         </div>
                     </div>
                   </div>
-                  <div style="background-color: rgba(250, 225, 228, 0.711) ;" class="carousel-item active border rounded p-5">
+                  <div class="carousel-item active border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center">
                             <div>
@@ -71,7 +73,7 @@
 
                                 </p>
                                 <h1>$600</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn buy-now-button">Buy Now</div>
                             </div>
 
                         </div>
@@ -80,7 +82,7 @@
                         </div>
                     </div>
                   </div>
-                  <div style="background-color: rgba(250, 225, 228, 0.711) ;" class="carousel-item active border rounded p-5">
+                  <div class="carousel-item active border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center">
                             <div>
@@ -89,7 +91,7 @@
 
                                 </p>
                                 <h1>$420</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn buy-now-button">Buy Now</div>
                             </div>
 
                         </div>
@@ -121,7 +123,7 @@
         <!-- categories section starts here -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-5 categories">
                   <div class="col-lg-4 col-md-6 col-sm-12 ">
                     <div class="p-3 border bg-warning rounded-2 d-flex align-items-center justify-content-evenly">
                         <h1 class="text-white">Watches</h1>
@@ -165,7 +167,7 @@
                     <h4>$120</h4>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn-warning">
+                      <div class="btn buy-now-button">
                         Buy Now
                       </div>
                     </div>
@@ -182,7 +184,7 @@
                          <h4>$300</h4>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">
+                        <div class="btn buy-now-button">
                             Buy Now
                           </div>
                     </div>
@@ -199,7 +201,7 @@
                       <h4>$150</h4>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">
+                        <div class="btn buy-now-button">
                             Buy Now
                           </div>
                     </div>
@@ -224,7 +226,7 @@
                       <h4>$50</h4>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn-warning">
+                      <div class="btn buy-now-button">
                         Buy Now
                       </div>
                     </div>
@@ -239,7 +241,7 @@
                       <h4>$40</h4>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">
+                        <div class="btn buy-now-button">
                             Buy Now
                           </div>
                     </div>
@@ -257,7 +259,7 @@
                       <h4>$70</h4>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">
+                        <div class="btn buy-now-button">
                             Buy Now
                           </div>
                     </div>
@@ -269,7 +271,7 @@
 
         <!-- bags section ends here -->
         <!-- subscribe section starts here -->
-        <section style="background-color: rgba(250, 225, 228, 0.711) ; height: 300px;" class="container rounded-3 my-5 d-flex align-items-center justify-content-center">
+        <section style="height: 300px;" class="container rounded-3 my-5 d-flex align-items-center justify-content-center panda-bg-info">
            <div>
             <h2 class="mb-1">LET'S STAY IN TOUCH</h2>
             <p class="mb-1">Get updates on sales, specials and more</p>
